[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes_and_scripts/Enemies/Enemy_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemys/Enemy-explosive-car.png" type="Texture" id=2]
[ext_resource path="res://Scenes_and_scripts/Enemies/Explosive_car.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.1129, 11.8898 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.0013, 11.9797 )

[sub_resource type="CircleShape2D" id=3]
radius = 120.818

[sub_resource type="CircleShape2D" id=4]
radius = 39.2111

[node name="Explosive_car" instance=ExtResource( 1 )]
script = ExtResource( 3 )
points = 2

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
vframes = 2

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="HealthBar" parent="." index="3"]
margin_left = -42.0
margin_top = -38.0
margin_right = 42.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 42, 38 )

[node name="Danger_area" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Danger_area" index="0"]
shape = SubResource( 3 )

[node name="Explosion_area" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion_area" index="0"]
shape = SubResource( 4 )

[connection signal="body_entered" from="Danger_area" to="." method="_on_Danger_area_body_entered"]
[connection signal="body_exited" from="Danger_area" to="." method="_on_Danger_area_body_exited"]
[connection signal="body_entered" from="Explosion_area" to="." method="_on_Explosion_area_body_entered"]
